src/test/compile-fail/use-meta-dup.rs
// xfail-stage0
// error-pattern:duplicate meta item `name`

use std(name = "std", name = "nonstd");

fn main() { }